--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,6 +4,10 @@
     package="org.quaestio.kotlinconvertedwebview">
 
     <uses-permission android:name="android.permission.INTERNET" />
+    
+    <uses-feature
+        android:name="android.hardware.touchscreen"
+        android:required="false" />
 
     <application
         android:allowBackup="false"
